# MindDriveAI

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build_portable.bat  build_windows.bat  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  run_desktop.bat  run_desktop.sh
.github/workflows/: ci.yml
docs/: PORTABLE_README.md  PRIVACY.md  SECURITY.md
docs/wiki/: Home.md
public/: index.html  script.js  styles.css
pyinstaller/: MindDriveAI.spec
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/chat/: route.ts
src/components/: chat-area.tsx  chat-input.tsx  chat-sidebar.tsx  minddriveai-logo.tsx  nexo-logo.tsx  settings-dialog.tsx  welcome-screen.tsx
src/hooks/: use-conversations.ts  use-settings.ts
src/lib/: types.ts
src/minddriveai/: __init__.py  main.py
src/minddriveai/ai/: __init__.py  base_provider.py  gemini_provider.py  openai_provider.py  provider_factory.py  provider_validator.py
src/minddriveai/config/: __init__.py  paths.py  settings.py
src/minddriveai/core/: __init__.py  exceptions.py  gemini_service.py  safety.py  summarizer.py  token_budget.py
src/minddriveai/ops/: __init__.py  diagnostics.py  logging_config.py
src/minddriveai/security/: __init__.py  passwords.py  secrets_store.py
src/minddriveai/storage/: __init__.py  db.py  migrations.py  models.py  repositories.py
src/minddriveai/ui/: __init__.py  main_window.py  theme.py
tests/: test_costs.py  test_migrations.py  test_security.py
