[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minddriveai"
version = "0.1.0"
description = "MindDriveAI desktop portátil com Gemini API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MindDriveAI" }]
dependencies = [
  "google-genai>=1.12.1",
  "cryptography>=43.0.0",
  "argon2-cffi>=23.1.0",
  "ttkbootstrap>=1.12.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.11.0",
  "pytest>=8.3.0",
  "ruff>=0.7.0",
  "mypy>=1.12.0",
  "pre-commit>=4.0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true
packages = ["minddriveai"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
